--- a/questions/220819.md
+++ b/questions/220819.md
@@ -1,4 +1,24 @@
 # 라이브러리와 프레임워크의 차이
 생각해보면 평소에 라이브러리와 프레임워크라는 것을 어렴풋하게 알고는 있었지만 그 둘의 차이점이 무엇인지 바로 답변을 하라고 하면 못했을텐데, 
 오늘 이 부분에 대해서 질문이 들어와서 검색해보고 차이점을 좀 더 명확히 알 수 있었다.
-그러면서 추가적으로 궁금한 
+그러면서 추가적으로 궁금한 점이 생겼는데, 바로 프레임워크와 플랫폼의 차이는 무엇일까? 이다. 왜냐하면 expo는 리액트 네이티브의 프레임워크이자 플랫폼이라고 하는 글을 보았기 때문이다.
+아, 그전에 먼저 라이브러리와 프레임워크의 차이점은 바로 제어의 흐름이 어느 곳에 있느냐의 차이였다. 
+라이브러리는 그걸 사용하는 당사자의 손에 제어의 흐름이 있다면, 프레임워크는 제어의 흐름이 해당 프레임워크에 좀 더 집중되어있다.
+자율성이 높은 도구와 자율성은 높지 않지만 편리한 도구의 차이점이라고 보여졌다.
+
+# =+에 대하여
+당연히 =+를 써볼 생각을 안해서 자바스크립트에서 이해 대해 오류가 생기지 않는다는 사실을 몰랐다. 과연 다른 언어 python이나, C언어도 에러를 안띄울까?
+
+# for문의 순서
+for문에 변수와 조건들을 순서에 맞게 넣지 않으면 undefined가 뜬다.
+
+# 비동기와 동기
+이 부분은 오늘 질문은 아니고 이전 일요일의 질문인데, 아직 여기에 대해 자세히 알아보지는 못했지만 기억하기 위해 기록을 해둔다.
+useState와 관련된 질문으로 변수가 한번에 저장이 안되고 그 이후에 저장이 되는 문제였는데, 이게 비동기의 문제로 콘솔에 찍는 것이 데이터의 저장보다 빨라서 그렇다고 한다.
+과연 이를 해결할 방법은 없는걸까? 한번 더 공부해보자.
+
+# 랜더링
+이건 이전에 면접 때 받은 질문인데, 랜더링이란 무엇인가? 에 대한 질문이었다. 우선 당시에는 어플이 실행하기 위해서는 로딩, 즉 프로그램의 실행이 필요한데 그를 일컫는 말이라고 설명한 걸로 기억한다.
+다음에 좀 더 자세히 찾아보겠어!!
+
+
